# test-0527

./: Cargo.toml  LICENSE  README.md  foo.html
src/: main.rs
test/: bar.html  foo.html  node.json
